# LegendaryTemplateOfAllRussia

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  jenkinsfile  pubkey  pubkey.pub  pyproject.toml  requirements.txt
Application/: main.py
ArtificialIntelegence/: README.md
Database/: READMI.md
Frontend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.deb  READMI.md  nginx.conf  package-lock.json
GrafanaData/: grafana.db
ML_AI_NN/: READMI.md
Nginx/: Dockerfile  nginx.conf
PrometheusData/: Dockerfile
SQLDatabase/: DB.env
SQLDatabase/data/: pg_hba.conf  postmaster.pid
SQLDatabase/data/global/: pg_control
grafana_data/: grafana.db
nginx/: Dockerfile  nginx.conf
